Homepage themed and sexy

--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -20,14 +20,18 @@
 {% extends "_layout" %}
 
 {% block content %}
-	<h1>{{ entry.title }}</h1>
-
-	{{ entry.body }}
-
-	<h2>Recent News</h2>
-	<ul>
-		{% for entry in craft.entries.section('news').limit(5).find() %}
-			<li><a href="{{ entry.url }}">{{ entry.title }}</a></li>
-		{% endfor %}
-	</ul>
+	<nav id="projects">
+		<ul>
+			{% for entry in craft.entries.section('projects').order('postDate asc').limit(4) %}
+				<li>
+					<a href="{{ entry.url }}">
+						<div class="label"><span class="plus">+</span> {{ entry.title }}</div>
+						<div class="preview">
+							{{ entry.body }}
+						</div>
+					</a>
+				</li>
+			{% endfor %}
+		</ul>
+	</nav>
 {% endblock %}
