--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -1,6 +1,8 @@
 @import "compass"
-@import "layout"
-@import "background"
+
 @import "colors"
+@import "background"
+@import "layout"
 @import "typography"
 @import "nav"
+@import "fancybox"
