--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -15,29 +15,40 @@
 	<meta charset="utf-8" />
 	<title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
 	<link rel="home" href="{{ siteUrl }}" />
+	<link rel="stylesheet" href="{{ siteUrl }}css/jquery.fancybox.css">
 	<link rel="stylesheet" href="{{ siteUrl }}css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 	<div id="background"></div>
-	<div id="overlay"></div>
 	<div id="container">
 		<header id="header">
 			<h1><a href="{{ siteUrl }}">{{ siteName }}</a></h1>
-			<h2>Brand + Identity Design</h2>
+			<h2>
+				Art Direction + Design
+				<span class="separator">  \  </span>
+				BOS + NYC
+				<span class="separator">  \  </span>
+				<a href="maito:mside915@gmail.com">mside915@gmail.com</a>
+				<span class="separator">  \  </span>
+				631.871.7327
+			</h2>
 		</header>
 
 		{% block content %}
-			<p>If you see me, you haven’t set your <code>{% verbatim %}{% block content %}…{% endblock %}{% endverbatim %}</code> yet.</p>
-			<p>See Twig’s <a href="http://twig.sensiolabs.org/doc/templates.html#template-inheritance">Template Inheritance</a> documentation for an explanation.</p>
 		{% endblock %}
 
 		<footer id="footer">
-			Copyright {{ now.year }} {{ siteName }}. All rights reserved  •  Developed by <a href="http://brandonferioli.com">Brandon Ferioli</a>
+			Copyright {{ now.year }} {{ siteName }}. All rights reserved
+			<span class="separator">  \  </span>
+			Developed by <a href="http://brandonferioli.com">Brandon Ferioli</a>
 		</footer>
 	</div>
-	<script type="text/javascript" src="{{ siteUrl }}js/jquery.min.js"></script>
+	<script type="text/javascript" src="{{ siteUrl }}js/lib/jquery.min.js"></script>
+	<script type="text/javascript" src="{{ siteUrl }}js/lib/jquery.event.move.js"></script>
+	<script type="text/javascript" src="{{ siteUrl }}js/lib/jquery.event.swipe.js"></script>
+	<script type="text/javascript" src="{{ siteUrl }}js/lib/jquery.fancybox.js"></script>
 	<script type="text/javascript" src="{{ siteUrl }}js/app.js"></script>
 </body>
 </html>
