--- a/public/sass/_colors.sass
+++ b/public/sass/_colors.sass
@@ -1,1 +1,8 @@
 $black: #000
+$white: #fff
+$white-translucent: rgba(255, 255, 255, 0.5)
+$med-grey: #888
+$light-grey: #bbb
+
+$link: #888
+$link-hover: #666
