--- a/public/sass/_nav.sass
+++ b/public/sass/_nav.sass
@@ -2,15 +2,14 @@ nav#projects
 	position: relative
 	ul
 		list-style: none
+		max-width: 100%
 
 	li
 		font-size: 1.2rem
 		height: 6rem
 		overflow: hidden
-		-webkit-transform: translateZ(0)
-		transition: height 150ms linear
-		-moz-transition: height 150ms linear
-		-webkit-transition: height 150ms linear
+		+transform(translateZ(0))
+		+transition(height 150ms linear)
 
 	ul:hover li
 		height: 3rem
@@ -20,45 +19,41 @@ nav#projects
 			height: 15rem
 
 	.label
-		-webkit-transform: translateZ(0)
-		transition: line-height 150ms linear
-		-moz-transition: line-height 150ms linear
-		-webkit-transition: line-height 150ms linear
+		+transform(translateZ(0))
+		+transition(line-height 150ms linear)
 		line-height: 6rem
 
 	.plus
 		font-size: 1.6rem
 		position: relative
 		top: 0.075rem
-		-webkit-transform: translateZ(0)
-		transition: all 150ms linear
-		-moz-transition: all 150ms linear
-		-webkit-transition: all 150ms linear
+		+transform(translateZ(0))
+		+transition(all 150ms linear)
 
-	.preview
+	.gallery
 		height: 12rem
-		overflow: hidden
 		opacity: 0
-		-webkit-transform: translateZ(0)
-		transition: opacity 300ms linear
-		-moz-transition: opacity 300ms linear
-		-webkit-transition: opacity 300ms linear
+		+transform(translateZ(0))
+		+transition(opacity 300ms linear)
 		p
 			margin: 0
-		img
-			float: left
-			height: 12rem
+			white-space: nowrap
+			overflow-x: scroll
+			overflow-y: hidden
+			-webkit-overflow-scrolling: touch
+		a
+			display: inline-block
 			margin: 0 1rem 1rem 0
+		img
+			height: 12rem
 
 	li:hover
 		.plus
-			color: #DE8AEA
-			transform: rotate(90deg)
-			-moz-transform: rotate(90deg)
-			-webkit-transform: rotate(90deg)
-		.preview
+			color: $med-grey
+			+transform(rotate(90deg))
+		.gallery
 			opacity: 1
 
 	a
-		color: #fff
+		color: $black
 		text-decoration: none
