--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -17,6 +17,7 @@
 	<link rel="home" href="{{ siteUrl }}" />
 	<link rel="stylesheet" href="{{ siteUrl }}css/jquery.fancybox.css">
 	<link rel="stylesheet" href="{{ siteUrl }}css/style.css">
+	<script data-main="js/main" src="{{ siteUrl }}js/lib/require.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -45,10 +46,5 @@
 			Developed by <a href="http://brandonferioli.com">Brandon Ferioli</a>
 		</footer>
 	</div>
-	<script type="text/javascript" src="{{ siteUrl }}js/lib/jquery.min.js"></script>
-	<script type="text/javascript" src="{{ siteUrl }}js/lib/jquery.event.move.js"></script>
-	<script type="text/javascript" src="{{ siteUrl }}js/lib/jquery.event.swipe.js"></script>
-	<script type="text/javascript" src="{{ siteUrl }}js/lib/jquery.fancybox.js"></script>
-	<script type="text/javascript" src="{{ siteUrl }}js/app.js"></script>
 </body>
 </html>
