new styles compiled

--- a/public/sass/_fancybox.sass
+++ b/public/sass/_fancybox.sass
@@ -4,7 +4,7 @@
   -webkit-box-shadow: none
 
 .fancybox-title
-  font-family: $sans-light
+  font-family: $sans
   font-size: 1.1rem
   text-align: center
 
