--- a/public/sass/_typography.sass
+++ b/public/sass/_typography.sass
@@ -1,4 +1,4 @@
-$sans: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$sans: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif
 
 
 body
