--- a/public/sass/_typography.sass
+++ b/public/sass/_typography.sass
@@ -23,10 +23,10 @@ header
     margin: 0
     text-transform: lowercase
     a.logo
-      background: url('/images/m-logo.png') center center no-repeat
+      background: url('/images/m-logo.png') center top no-repeat
       background-size: cover
-      width: 8.75rem
-      height: 5.625rem
+      width: 4.375rem
+      height: 4.375rem
       text-decoration: none
   h2
     font-family: $sans
