--- a/public/sass/_typography.sass
+++ b/public/sass/_typography.sass
@@ -25,6 +25,7 @@ header
     a.logo
       background: url('/images/m-logo.png') center top no-repeat
       background-size: cover
+      display: block
       width: 4.375rem
       height: 4.375rem
       text-decoration: none
