--- a/public/sass/_typography.sass
+++ b/public/sass/_typography.sass
@@ -24,7 +24,7 @@ header
     text-transform: lowercase
     a.logo
       background: url('/images/m-logo.png') center top no-repeat
-      background-size: cover
+      background-size: contain
       display: block
       width: 4.375rem
       height: 4.375rem
